--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,10 @@
         }
     ],
     "minimum-stability": "stable",
-    "require": {}
+    "require": {
+        "monolog/monolog": "^3.7",
+        "doctrine/orm": "^3",
+        "doctrine/dbal": "^4",
+        "symfony/cache": "^7"
+    }
 }
